fixed readfile